Fix review comment alignment

--- a/sources/easygenerator.Web/Content/reviewPanel.less
+++ b/sources/easygenerator.Web/Content/reviewPanel.less
@@ -218,7 +218,7 @@
 
                 .comment-description-text {
                     flex: 1 1 auto;
-                    margin-top: 4px;
+                    margin-top: 2px;
                     margin-left: 7px;
                     line-height: 1.75;
 
